# brake-chat

./: .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTOR_LICENSE_AGREEMENT  Dockerfile  Makefile  README.md  SECURITY_PATCHES.md  contribution_stats.py  docker-compose.yaml  hatch_build.py  i18next-parser.config.ts  package-lock.json  package.json  pyproject.toml  run-compose.sh  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build-release.yml.disabled  docker-build.yaml  format-backend.yaml  format-build-frontend.yaml  lint-backend.yaml  lint-frontend.yaml  pytest.yml
backend/: requirements-min.txt  requirements.txt  start.sh
backend/open_webui/: __init__.py  config.py  constants.py  env.py  functions.py  main.py  tasks.py
backend/open_webui/data/: readme.txt
backend/open_webui/functions/: chat_compactor.py
backend/open_webui/internal/: db.py
backend/open_webui/migrations/: env.py
backend/open_webui/migrations/versions/: 1af9b942657b_migrate_tags.py  37f288994c47_add_group_member_table.py  38d63c18f30f_add_oauth_session_table.py  3ab32c4b8f59_update_tags.py  9674e67dd3be_drop_tool_table.py  a5c220713937_add_reply_to_id_column_to_message.py  af906e964978_add_feedback_table.py  c29facfe716b_update_file_table_path.py  ca81bd47c050_add_config_table.py  ca9f34c0bfb4_add_chat_compactor_function.py  d31026856c01_update_folder_table_data.py  e42a3b8f7c12_remove_tool_table.py  e5a8c9d1f234_add_encryption_to_auth.py  e9f8a2b5c123_drop_tool_table.py  f1a2b3c4d5e6_drop_function_table.py
backend/open_webui/models/: auths.py  channels.py  chats.py  feedbacks.py  files.py  folders.py  functions.py  groups.py  knowledge.py  memories.py  messages.py  models.py  notes.py  oauth_sessions.py  prompts.py  tags.py  tools.py  users.py
backend/open_webui/retrieval/: utils.py
backend/open_webui/retrieval/loaders/: datalab_marker.py  external_document.py  external_web.py  main.py  mineru.py  mistral.py  tavily.py  youtube.py
backend/open_webui/retrieval/models/: colbert.py  external.py
backend/open_webui/retrieval/vector/: factory.py  main.py  type.py
backend/open_webui/retrieval/web/: bing.py  brave.py  duckduckgo.py  external.py  google_pse.py  main.py  searxng.py  tavily.py  utils.py
backend/open_webui/routers/: audio.py  auths.py  channels.py  chats.py  configs.py  evaluations.py  files.py  folders.py  functions.py  groups.py  images.py  knowledge.py  memories.py  models.py  notes.py  ollama.py  openai.py  pipelines.py  prompts.py  retrieval.py  scim.py  tasks.py  tools.py  users.py  utils.py
backend/open_webui/socket/: main.py  utils.py
backend/open_webui/storage/: provider.py
backend/open_webui/test/util/: test_telemetry_instrumentors.py
backend/open_webui/utils/: access_control.py  audit.py  auth.py  channels.py  chat.py  code_interpreter.py  embeddings.py  encryption.py  encryption_keys.py  files.py  filter.py  logger.py  middleware.py  misc.py  models.py  oauth.py  payload.py  pdf_generator.py  plugin.py  redis.py  response.py  security_headers.py  task.py  tools.py  webhook.py
backend/open_webui/utils/images/: comfyui.py
backend/open_webui/utils/mcp/: client.py
backend/open_webui/utils/response_handling/: __init__.py  content_blocks.py  reasoning_handler.py  serialization.py  stream_processor.py  tag_parser.py
backend/open_webui/utils/telemetry/: constants.py  instrumentors.py  metrics.py  setup.py
cypress/data/: example-doc.txt
cypress/e2e/: chat.cy.ts  registration.cy.ts
cypress/support/: e2e.ts
docs/: SECURITY.md
kubernetes/helm/: README.md
kubernetes/manifest/base/: ollama-statefulset.yaml  webui-deployment.yaml
next-app/: eslint.config.mjs  package-lock.json  package.json  vitest.config.ts
next-app/src/app/: globals.css  layout.tsx  page.tsx
next-app/src/app/(app)/: layout.tsx  page.tsx
next-app/src/app/auth/: page.tsx
next-app/src/components/chat/: Chat.tsx  MessageInput.tsx  ModelSelector.tsx  index.ts
next-app/src/components/common/: Badge.tsx  Banner.tsx  Checkbox.tsx  CodeEditor.tsx  Collapsible.tsx  ConfirmDialog.tsx  Drawer.tsx  Dropdown.tsx  Emoji.tsx  EmojiPicker.tsx  Image.tsx  ImagePreview.tsx  Loader.tsx  Modal.tsx  Overlay.tsx  Pagination.tsx  SensitiveInput.tsx  Spinner.test.tsx  Spinner.tsx  Switch.tsx  Tags.tsx  Textarea.tsx  Tooltip.tsx  index.ts
next-app/src/components/icons/: index.ts
next-app/src/components/layout/: index.ts
next-app/src/context/: SocketContext.tsx  index.ts
next-app/src/hooks/: index.ts  useChatEvents.ts  useClickOutside.ts  useDebounce.ts  useLocalStorage.ts  useMediaQuery.ts  useStreamingResponse.ts
next-app/src/lib/: constants.ts
next-app/src/lib/api/: auths.ts  client.ts
next-app/src/lib/utils/: index.ts
next-app/src/store/: index.ts
next-app/src/types/: index.ts  katex.d.ts
src/: app.html
src/lib/: constants.ts  emoji-shortcodes.json
src/lib/apis/: index.ts
src/lib/apis/channels/: index.ts
src/lib/apis/chats/: index.ts
src/lib/apis/configs/: index.ts
src/lib/apis/evaluations/: index.ts
src/lib/apis/files/: index.ts
src/lib/apis/folders/: index.ts
src/lib/apis/functions/: index.ts
src/lib/apis/groups/: index.ts
src/lib/apis/images/: index.ts
src/lib/apis/knowledge/: index.ts
src/lib/apis/models/: index.ts
src/lib/apis/notes/: index.ts
src/lib/apis/ollama/: index.ts
src/lib/apis/openai/: index.ts
src/lib/apis/prompts/: index.ts
src/lib/apis/retrieval/: index.ts
src/lib/apis/tools/: index.ts
src/lib/apis/users/: index.ts
src/lib/components/: AddConnectionModal.svelte  AddFilesPlaceholder.svelte  AddToolServerModal.svelte  AddToolServerModal.svelte.bak  ChangelogModal.svelte  ImportModal.svelte  OnBoarding.svelte
src/lib/stores/: index.ts
src/lib/utils/: apiClient.ts  index.ts  text-scale.ts
src/routes/: +layout.svelte
src/routes/(app)/: +layout.svelte
src/routes/auth/: +page.svelte
src/routes/error/: +page.svelte
static/pyodide/: pyodide-lock.json
(+343 files in other folders)
