[project]
name = "open-webui"
description = "Open WebUI"
authors = [
    { name = "Timothy Jaeryang Baek", email = "tim@openwebui.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "fastapi==0.118.0",
    "uvicorn[standard]==0.37.0",
    "pydantic==2.11.9",
    "python-multipart==0.0.20",
    "itsdangerous==2.2.0",
    "python-socketio==5.14.0",
    "python-jose==3.5.0",
    "cryptography",
    "bcrypt==5.0.0",
    "argon2-cffi==25.1.0",
    "PyJWT[crypto]==2.10.1",
    "authlib==1.6.5",
    "requests==2.32.5",
    "aiohttp==3.12.15",
    "async-timeout",
    "aiocache",
    "aiofiles",
    "starlette-compress==1.6.0",
    "httpx[socks,http2,zstd,cli,brotli]==0.28.1",
    "starsessions[redis]==2.2.1",
    "sqlalchemy==2.0.38",
    "psycopg2-binary==2.9.10",
    "alembic==1.14.0",
    "pycrdt==0.12.25",
    "redis",
    "RestrictedPython==8.0",
    "loguru==0.7.3",
    "asgiref==3.8.1",
    "tiktoken",
    "mcp==1.21.2",
    "openai",
    "langchain==0.3.27",
    "langchain-community==0.3.29",
    "chromadb==1.1.0",
    "boto3==1.40.5",
    "ftfy==6.2.3",
    "chardet==5.2.0",
    "pypdf==6.0.0",
    "pymdown-extensions==10.14.2",
    "docx2txt==0.8",
    "python-pptx==1.0.2",
    "unstructured==0.18.18",
    "Markdown==3.9",
    "pypandoc==1.15",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "pyxlsb==1.0.10",
    "xlrd==2.0.1",
    "validators==0.35.0",
    "azure-ai-documentintelligence==1.0.2",
    "rank-bm25==0.2.2",
    "onnxruntime==1.20.1",
    "faster-whisper==1.1.1",
    "youtube-transcript-api==1.2.2",
    "pytube==15.0.0",
    "pydub",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "googleapis-common-protos==1.70.0",
    "google-cloud-storage==2.19.0",
    "azure-identity==1.25.0",
    "azure-storage-blob==12.24.1",
    "av==14.0.1",
    "ldap3==2.9.1",
    "opentelemetry-api==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-exporter-otlp==1.37.0",
    "opentelemetry-instrumentation==0.58b0",
    "opentelemetry-instrumentation-fastapi==0.58b0",
    "opentelemetry-instrumentation-sqlalchemy==0.58b0",
    "opentelemetry-instrumentation-redis==0.58b0",
    "opentelemetry-instrumentation-requests==0.58b0",
    "opentelemetry-instrumentation-logging==0.58b0",
    "opentelemetry-instrumentation-httpx==0.58b0",
    "opentelemetry-instrumentation-aiohttp-client==0.58b0",
    "fpdf>=1.7.2",
]
readme = "README.md"
requires-python = ">= 3.11, < 3.13.0a1"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary==2.9.10",
    "pgvector==0.4.1",
]

google = [
    "google-genai==1.52.0",
    "google-generativeai==0.8.5",
]

all = [
    "azure-search-documents==11.6.0",
    "elasticsearch==9.1.0",
    "firecrawl-py==4.5.0",
    "gcp-storage-emulator>=2024.8.3",
    "moto[s3]>=5.0.26",
    "oracledb==3.2.0",
    "pinecone==6.0.2",
    "playwright==1.49.1",
    "pymilvus==2.6.2",
    "pymongo",
    "qdrant-client==1.14.3",
    "weaviate-client==4.17.0",
]

[project.scripts]
open-webui = "open_webui:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "package.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[tool.hatch.build.hooks.custom]  # keep this for reading hooks from `hatch_build.py`

[tool.hatch.build.targets.wheel]
sources = ["backend"]
exclude = [
    ".dockerignore",
    ".gitignore",
    ".webui_secret_key",
    "dev.sh",
    "requirements.txt",
    "start.sh",
    "start_windows.bat",
    "webui.db",
    "chroma.sqlite3",
]
force-include = { build = "open_webui/frontend" }

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.svg,package-lock.json,*.lock,*.css,*-bundle.js,locales,example-doc.txt,emoji-shortcodes.json'
check-hidden = true
# ignore-regex = ''
ignore-words-list = 'ans,mappin'

[dependency-groups]
dev = [
    "docker~=7.1.0",
    "pytest~=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-docker~=3.1.1",
    "ruff==0.14.9",
]

lint = [
    "pre-commit==4.3.0",
    "pre-commit-uv==4.2.0",
    "mypy",
    "ruff",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D205",
    "D213",
    "D301",
    "D400",
    "D401",
    "D415",
    "D417",
    "FBT",
    "COM",
    "ANN",
    "ARG",
    "A001",
    "A002",
    "B005",
    "B006",
    "B007",
    "B008",
    "B016",
    "B017",
    "B018",
    "B023",
    "B024",
    "B034",
    "B904",
    "B905",
    "S101",
    "S102",
    "S104",
    "S105",
    "S106",
    "S110",
    "S112",
    "S310",
    "S311",
    "S603",
    "S607",
    "S608",
    "S113",
    "E402",
    "E501",
    "E711",
    "E712",
    "E722",
    "E731",
    "N801",
    "N803",
    "N805",
    "N806",
    "N807",
    "N815",
    "N812",
    "N999",
    "INP001",
    "PERF",
    "PLR",
    "SIM",
    "PTH",
    "PT011",
    "PT012",
    "PT018",
    "DTZ005",
    "DTZ006",
    "DTZ007",
    "BLE001",
    "TRY002",
    "TRY003",
    "TRY004",
    "TRY201",
    "TRY203",
    "TRY300",
    "TRY301",
    "TRY400",
    "TRY401",
    "PLW0602",
    "PLW0603",
    "PLW1508",
    "PLW2901",
    "PLC0415",
    "PLC3002",
    "PLR0912",
    "PLR0913",
    "C401",
    "C403",
    "C408",
    "C416",
    "C417",
    "C901",
    "ERA001",
    "EM101",
    "EM102",
    "SLF001",
    "G002",
    "G004",
    "G201",
    "T201",
    "T203",
    "TC002",
    "TC003",
    "RET503",
    "RET504",
    "PGH003",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF005",
    "RUF006",
    "RUF012",
    "RUF013",
    "RUF015",
    "RUF059",
    "UP031",
    "UP045",
    "PIE794",
    "PIE796",
    "PIE810",
    "PLE1205",
    "RSE102",
    "EXE002",
    "ASYNC109",
    "ASYNC210",
    "ASYNC230",
    "FAST002",
    "LOG015",
]
extend-select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"backend/open_webui/alembic/**" = ["D"]
"backend/open_webui/migrations/**" = ["D"]

[tool.mypy]
strict = false
python_version = "3.11"
ignore_missing_imports = true
allow_untyped_calls = true
allow_untyped_defs = true
no_implicit_optional = false
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = true
disable_error_code = [
    "import-untyped",
    "operator",
    "union-attr",
    "arg-type",
    "assignment",
    "valid-type",
    "var-annotated",
    "misc",
    "return-value",
    "index",
    "call-arg",
    "dict-item",
    "type-var",
    "return",
    "no-redef",
    "syntax",
]
exclude = [
    "backend/open_webui/alembic/",
    "backend/open_webui/migrations/",
    "backend/open_webui/test/",
]
